Ready to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta
-      name="theme-color"
-      content="linear-gradient(90deg, rgba(100, 225, 221, 1) 0%, rgba(80, 111, 199, 1) 76%, rgba(87, 90, 200, 1) 100%);"
-    />
+    <meta name="theme-color" content="#5E3CE2" />
 
     <!-- Колір вашого фону -->
     <!-- Забезпечення кольору статусбару для Android -->
