--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,8 @@
     <!-- Колір вашого фону -->
     <!-- Забезпечення кольору статусбару для Android -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="theme-color" content="#5E3CE2" />
-    <meta
-      name="theme-color"
-      content="#5E3CE2"
-      media="(prefers-color-scheme: light)"
-    />
+    <meta name="theme-color" content="" />
+    <meta name="theme-color" content="" media="(prefers-color-scheme: light)" />
     <meta
       name="theme-color"
       content="#000000"
