Ready to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="theme-color" content="" />
+    <meta name="theme-color" content="#4380C5" />
 
     <!-- Колір вашого фону -->
     <!-- Забезпечення кольору статусбару для Android -->
