Ready to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,7 @@
     <!-- Забезпечення кольору статусбару для Android -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="theme-color"
-      content="#ffffff"
-      media="(prefers-color-scheme: light)"
-    />
+    <meta name="theme-color" content="" media="(prefers-color-scheme: light)" />
     <meta
       name="theme-color"
       content="#000000"
