--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="theme-color" content="#ffffff" />
+    <!-- <meta name="theme-color" content="#ffffff" /> -->
 
     <!-- Колір вашого фону -->
     <!-- Забезпечення кольору статусбару для Android -->
-    <meta name="mobile-web-app-capable" content="yes" />
+    <!-- <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="theme-color"
@@ -25,7 +25,7 @@
       name="theme-color"
       content="#000000"
       media="(prefers-color-scheme: dark)"
-    />
+    /> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
