Ready to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="theme-color" content="#ffffff" />
+    <!-- <meta name="theme-color" content="#ffffff" /> -->
 
     <!-- Колір вашого фону -->
     <!-- Забезпечення кольору статусбару для Android -->
-    <!-- <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#ffffff" />
-    <meta
+    <!-- <meta
       name="theme-color"
       content="#ffffff"
       media="(prefers-color-scheme: light)"
